<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/institute_title"
        android:fontFamily="@font/wave"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="50sp"
        android:textColor="@color/darkGreen"
        android:id="@+id/mainHeading"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading"
        android:text="Name: "
        android:textColor="@color/darkGreen"
        android:textStyle="bold"
        android:fontFamily="@font/wave"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/nameLabel"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/wave"
        android:id="@+id/nameText"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/name_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
       app:layout_constraintTop_toBottomOf="@+id/nameLabel"
        >
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        android:fontFamily="@font/wave"
        android:text="Email: "
        android:textStyle="bold"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/emailLabel"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/emailText"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/wave"

        android:hint="@string/email_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        android:text="Age: "
        android:textStyle="bold"
        android:textColor="@color/darkGreen"
        android:fontFamily="@font/wave"

        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/ageLabel"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/ageText"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/age_hint"
        android:fontFamily="@font/wave"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel"
        >
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ageText"
        android:text="Gender: "
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/darkGreen"
        android:fontFamily="@font/wave"

        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/genderLabel"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/genderText"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/gender_hint"
        android:fontFamily="@font/wave"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/genderLabel"
        >
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/genderText"
        android:text="Phone: "
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/wave"

        android:textColor="@color/darkGreen"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/phoneLabel"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/phoneText"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/phone_hint"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/wave"

        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel"
        >
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/phoneText"
        android:text="Religion: "
        android:textStyle="bold"
        android:textColor="@color/darkGreen"
        android:fontFamily="@font/wave"

        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/religionLabel"
        >
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/religionText"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/religion_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/wave"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/religionLabel"
        >
    </EditText>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/religionText"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="30dp"
        app:cardBackgroundColor="@color/darkGreen"
        >
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/login_text"
                  android:textColor="@color/white"
                  android:layout_gravity="center"
                  android:fontFamily="@font/wave"
                  android:textStyle="bold"
                  android:textSize="15sp"
                  >

              </TextView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>